--- a/static/style.css
+++ b/static/style.css
@@ -595,6 +595,63 @@ button:active {
   margin-bottom: 10px;
 }
 
+.step {
+  display: none;
+}
+.step.active {
+  display: block;
+}
+.buttons {
+  margin-top: 15px;
+  display: flex;
+  gap: 10px;
+}
+
+.button-name {
+  align-items: center;
+  appearance: none;
+  background-color: #ff0000;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(163, 0, 0, 0.2) 0 2px 4px,
+    rgba(216, 0, 0, 0.15) 0 7px 13px -3px, #000000 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-flex;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow 0.15s, transform 0.15s;
+  user-select: none;
+  white-space: nowrap;
+  will-change: box-shadow, transform;
+  font-size: 18px;
+}
+
+.button-name:focus {
+  box-shadow: #000000 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #000000 0 -3px 0 inset;
+}
+
+.button-name:hover {
+  box-shadow: rgba(45, 35, 66, 0.3) 0 4px 8px,
+    rgba(45, 35, 66, 0.2) 0 7px 13px -3px, #000000 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.button-name:active {
+  box-shadow: #000000 0 3px 7px inset;
+  transform: translateY(2px);
+}
+
 @media (max-width: 600px) {
   .container {
     padding: 10px 12px;
@@ -634,11 +691,10 @@ button:active {
   }
 }
 
-  .container_chat_bot {
-    align-items: center;
-    justify-content: flex-end;
-    padding-bottom: 40vh; /* Aproxima a caixa do topo do teclado */
-  }
+.container_chat_bot {
+  align-items: center;
+  justify-content: flex-end;
+  padding-bottom: 40vh;
 }
 
 img,
