--- a/static/style.css
+++ b/static/style.css
@@ -652,6 +652,19 @@ button:active {
   transform: translateY(2px);
 }
 
+.input {
+  margin: 30px;
+  background: none;
+  border: none;
+  outline: none;
+  max-width: 190px;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 9999px;
+  box-shadow: inset 2px 5px 10px rgb(0, 0, 0);
+  color: #ffffff;
+}
+
 @media (max-width: 600px) {
   .container {
     padding: 10px 12px;
