Arrumando o login, deixando bonito

--- a/templates/register.html
+++ b/templates/register.html
@@ -125,7 +125,7 @@
             <button type="button" class="button-name" onclick="prevStep()">
               Voltar
             </button>
-            <button type="submit" class="button-name">Registrar</button>
+            <button type="submit" class="button-name">Criar Conta</button>
           </div>
         </div>
       </form>
