Diminuindo a altura dos inputis

--- a/static/style.css
+++ b/static/style.css
@@ -697,7 +697,7 @@ button:active {
   justify-content: center;
   gap: 0.5em;
   border-radius: 25px;
-  padding: 0.6em;
+  padding: 0.2em;
   border: none;
   outline: none;
   color: white;
@@ -718,7 +718,8 @@ button:active {
   width: 100%;
   color: #d3d3d3;
   font-size: 0.9em;
-  padding: 0.3em 0;
+  padding: 0.2em 0;
+  line-height: 1em;
 }
 
 .form .btn {
