--- a/static/style.css
+++ b/static/style.css
@@ -665,7 +665,7 @@ button:active {
   color: #ffffff;
 }
 
-.body {
+body {
   margin: 0;
   padding: 0;
   height: 100vh;
@@ -701,10 +701,10 @@ button:active {
 
 .field {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   gap: 0.5em;
   border-radius: 25px;
-  padding: 0.2em 0.8em;
+  padding: 0.3em 0.8em;
   background-color: #171717;
   box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
 }
@@ -714,7 +714,6 @@ button:active {
   width: 1em;
   fill: white;
   flex-shrink: 0;
-  margin-top: 0.4em;
 }
 
 .input-field {
@@ -724,8 +723,8 @@ button:active {
   width: 100%;
   color: #d3d3d3;
   font-size: 0.9em;
-  padding: 0.1em 0 0.2em 0;
-  line-height: 1em;
+  padding: 0.4em 0;
+  line-height: 1.2em;
 }
 
 .form .btn {
