--- a/static/style.css
+++ b/static/style.css
@@ -714,6 +714,7 @@ body {
   width: 1em;
   fill: white;
   flex-shrink: 0;
+  margin-left: 0.5em;
 }
 
 .input-field {
@@ -726,6 +727,7 @@ body {
   padding: 0em 0;
   line-height: 1em;
   padding-top: 0.4em;
+  padding-left: 1.5em;
 }
 
 .form .btn {
