--- a/static/style.css
+++ b/static/style.css
@@ -619,21 +619,21 @@ button:active {
   color: #ffffff;
   cursor: pointer;
   display: inline-flex;
-  height: 48px;
+  height: 28px;
   justify-content: center;
   line-height: 1;
   list-style: none;
   overflow: hidden;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding-left: 10px;
+  padding-right: 10px;
   position: relative;
-  text-align: left;
+  text-align: center;
   text-decoration: none;
   transition: box-shadow 0.15s, transform 0.15s;
   user-select: none;
   white-space: nowrap;
   will-change: box-shadow, transform;
-  font-size: 18px;
+  font-size: 12px;
 }
 
 .button-name:focus {
@@ -727,7 +727,6 @@ body {
   padding: 0em 0;
   line-height: 1em;
   padding-top: 0.4em;
-  padding-left: 1.5em;
 }
 
 .form .btn {
