Arrumando o link do login e o tamanho da caixinha do login

--- a/templates/login.html
+++ b/templates/login.html
@@ -54,7 +54,7 @@
       </div>
 
       <div class="btn" style="display: flex; justify-content: center">
-        <button class="button-name" type="submit">Entrar</button>
+        <button class="button-name button-login" type="submit">Entrar</button>
       </div>
 
       <div style="text-align: center; margin-top: 1em">
