--- a/static/style.css
+++ b/static/style.css
@@ -612,11 +612,11 @@ body {
   padding: 0;
   height: 100vh;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   background: #111111;
+  padding-top: 80px;
   overflow: hidden;
-}
 
 .form {
   display: flex;
