Criando um olho que mostra a senha

--- a/templates/login.html
+++ b/templates/login.html
@@ -50,6 +50,7 @@
             d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"
           ></path>
         </svg>
+
         <input
           type="password"
           id="senha"
@@ -58,6 +59,20 @@
           placeholder="Senha"
           required
         />
+
+        <!-- botão do olho -->
+        <button type="button" class="eye-toggle" onclick="togglePassword()">
+          <svg
+            id="eye-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 16 16"
+            class="eye-icon"
+          >
+            <path
+              d="M1.173 8.5a13.133 13.133 0 0 1 2.43-2.611L1.354 3.646a.5.5 0 1 1 .707-.707l13 13a.5.5 0 0 1-.707.707l-2.53-2.53A8.74 8.74 0 0 1 8 13.5C3.5 13.5 1 8.5 1 8.5a13.134 13.134 0 0 1 .173-.5zM8 4.5c2.5 0 4.5 2 4.5 4s-2 4-4.5 4a4.5 4.5 0 0 1-4.5-4c0-.538.09-1.052.253-1.53l1.378 1.378A2.5 2.5 0 1 0 8 6a2.5 2.5 0 0 0-1.53.253l1.378 1.378A4.493 4.493 0 0 1 8 4.5z"
+            ></path>
+          </svg>
+        </button>
       </div>
 
       <div class="btn" style="display: flex; justify-content: center">
@@ -84,6 +99,22 @@
           location.reload();
         });
       });
+
+      /*FUNÇÃO DO OLHO MOSTRAR A SENHA*/
+      function togglePassword() {
+        const input = document.getElementById("senha");
+        const eyeIcon = document.getElementById("eye-icon");
+
+        if (input.type === "password") {
+          input.type = "text";
+          eyeIcon.innerHTML =
+            '<path d="M16 8s-2.5 5-8 5-8-5-8-5 2.5-5 8-5 8 5 8 5zm-8 2a2 2 0 1 1 0-4 2 2 0 0 1 0 4z"></path>';
+        } else {
+          input.type = "password";
+          eyeIcon.innerHTML =
+            '<path d="M1.173 8.5a13.133 13.133 0 0 1 2.43-2.611L1.354 3.646a.5.5 0 1 1 .707-.707l13 13a.5.5 0 0 1-.707.707l-2.53-2.53A8.74 8.74 0 0 1 8 13.5C3.5 13.5 1 8.5 1 8.5a13.134 13.134 0 0 1 .173-.5zM8 4.5c2.5 0 4.5 2 4.5 4s-2 4-4.5 4a4.5 4.5 0 0 1-4.5-4c0-.538.09-1.052.253-1.53l1.378 1.378A2.5 2.5 0 1 0 8 6a2.5 2.5 0 0 0-1.53.253l1.378 1.378A4.493 4.493 0 0 1 8 4.5z"></path>';
+        }
+      }
     </script>
   </body>
 </html>
